# HalfEdgeSubdivision

./: .gitignore  CMakeLists.txt  CMakePresets.json  flex.proj  vcpkg.json
assets/shaders/: Intersection.hlsl
assets/shaders/CBT/: CBT.hlsl  CBT_DebugVis.hlsl  CBT_GetArguments.hlsl  CBT_SumReduction.hlsl  CBT_TerrainAdapt.hlsl  ConcurrentBinaryTree.hlsl
assets/shaders/HalfEdge/: DebugVIS.hlsl  FACC.hlsl  HE_AdaptiveCC.hlsl  HE_BasicForwardRender.hlsl  HE_CatmullClark.hlsl  HE_Common.hlsl  HE_ComputeLevel.hlsl  HE_Initialize.hlsl  HL_WorkGraph.hlsl  HalfEdge.hlsl
includes/: CBT.hpp  HalfEdgeMesh.hpp  LibraryBuilder.hpp  TestComponent.hpp
src/: CBT.cpp  HalfEdgeMesh.cpp  main.cpp
